huge dao refactoring: removed event listener and upsert statements